abilities can now be added through api